# persona-counsel

./: .gitignore  .pnp.cjs  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  counsel.spec  package.json  pyproject.toml  roadmap.md  todo.md
.github/workflows/: ci.yml  release_artifact_matrix.yml
docs/: extension-verification.md  python_dependency_locking.md  release-readiness-checklist.md  release_channels.md  release_signing_secrets.md
epics/: AGENTS.md
epics/00_vision/: demo.md  persona-counsel-tech-stack_v1.md  spec.md
epics/01_artifactmatrix/: 01_artifactmatrix_implementation.md  01_artifactmatrix_plan.md  01_artifactmatrix_primer.md
epics/01_portability/: 01_portability_implementation.md  01_portability_plan.md  01_portability_primer.md
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
extension/resources/: troubleshooting.md
extension/src/: extension.ts
extension/src/test/: runTest.ts
extension/src/test/suite/: extension.e2e.test.ts  index.ts
releases/: history.jsonl  latest.json
requirements/: runtime.in
scripts/: build_vscode_backend.sh  check_vscode_backend_matrix.sh  generate_python_sbom.py  generate_vscode_backend_manifest.py  gh_failed_run_logs.sh  notarize_macos_backend.sh  package_vscode_extension.sh  post_release_verify.sh  pr_open.sh  pyinstaller_entry.py  refresh_runtime_lock.sh  release.mjs  release_queue_ci.sh  release_reset.mjs  release_vscode_extension.sh  sign_macos_backend.sh  smoke_test_vsix_backend.ps1  smoke_test_vsix_backend.sh  validate_local_cli.sh  validate_runtime_lock.sh  verify_release_metadata.py  verify_toolchain_versions.py  verify_vsix_backend_integrity.py  verify_vsix_upgrade_path.py
src/persona_counsel/: __init__.py  cli.py
vscode/: BACKEND.md
